<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

           <TextView
               android:id="@+id/textView1"
               android:layout_column="1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginBottom="20dp"
               android:layout_marginLeft="40dp"
               android:layout_marginRight="40dp"
               android:layout_marginTop="20dp"
               android:text="@string/SelectInitialization"
               android:textSize="25dp" />
                
            <TextView
                android:id="@+id/textView2"
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/SelectProtocol"
                android:textSize="25dp" />
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/SelectMode"
                android:textSize="25dp" />
            
		</TableRow>

   		<TableRow
    		android:id="@+id/tableRow2"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
            
			<ListView
			    android:id="@+id/listView1"			    
			    android:layout_column="1"
			    android:layout_marginBottom="20dp"
			    android:layout_marginLeft="40dp"
			    android:layout_marginRight="40dp"
			    android:layout_marginTop="20dp"
			    android:choiceMode="singleChoice"
			    android:clickable="true">

        	</ListView>
        	
			<ListView
			    android:id="@+id/listView2"
			    android:layout_column="2"
			    android:layout_marginBottom="20dp"
			    android:layout_marginLeft="40dp"
			    android:layout_marginRight="40dp"
			    android:layout_marginTop="20dp" 
			    android:choiceMode="singleChoice" 
			    android:clickable="true"> 
			</ListView>   
			
			<ListView
			    android:id="@+id/listView3"
			    android:layout_column="3"
			    android:layout_marginBottom="20dp"
			    android:layout_marginLeft="40dp"
			    android:layout_marginRight="40dp"
			    android:layout_marginTop="20dp" 
			    android:choiceMode="singleChoice" 
			    android:clickable="true"> 
			</ListView> 
			    
		</TableRow>

   		<TableRow
   		    android:id="@+id/tableRow3"
   		    android:layout_width="wrap_content"
   		    android:layout_height="wrap_content" >
			
   		    <Button
	   		    android:id="@+id/button1"
	   		    android:layout_column="3"
			    android:layout_marginBottom="20dp"
			    android:layout_marginLeft="40dp"
			    android:layout_marginRight="40dp"
			    android:layout_marginTop="20dp"
	   		    android:text="@string/ok" />
   		    
   		</TableRow>

   		

    </TableLayout>
